# Pixels

./: 1h_weapon.gd  AnimatedSprite2D13.gd  AnimatedSprite2D3.gd  CMakeLists.txt  CharacterLayer.gd  PanelContainer.gd  UILayer.gd  affinity_label.tscn  battle_engine.gd  body.gd  body.png.import  cape.png.import  character_root.gd  character_root.tscn  chest.png.import  e_upper_body_basic_robes.png.import  export_presets.cfg  fps_indicator.gd  globals.gd  hair.gd  hair.png.import  harken_hero.png.import  head.gd  icon.gd  icon.svg.import  image293.png.import  image305.png.import  l_arm.gd  l_leg.gd  left_boot.png.import  left_gloves.png.import  left_shoulders.png.import  lennethh.png.import  lennethh_outline.png.import  main.gd  main.tscn  maria-0.png.import  node_2d.tscn  pixel_text_theme.tres  project.godot  (+10 more)
BackgroundLayer/: battle_background_layer.tscn  splash_background_layer.tscn  tavern_background_layer.tscn
CharacterLayer/: BattleCharacterLayer.gd  BattleCharacterLayer.tscn  SplashCharacterLayer.tscn  TavernCharacterLayer.tscn
Icon/: AnimatedSprite2D.gd  EquipmentTitle.gd  Panel.gd  TextureButton.gd  affinity_label.tscn  icon.tscn
UI/: CharacterPortraitProgressbar.gd  EventLog.gd  FightButton.gd  InventoryGrid.gd  ItemSlot.tscn  QuitButton.gd  ScrollContainer.gd  StartNewGameButton.gd  StatsText.gd  all_inventory.tscn  battle_ui.gd  battle_ui.tscn  character_equipment.tscn  character_portrait.gd  character_portrait.tscn  default_tavern_ui.tscn  empty_slot.tscn  inventory.tscn  splash_ui.tscn  tavern_ui.gd  tavern_ui.tscn
assets/: PixeloidSans.ttf.import  basic_r_arm_robes.png.import  basic_shoulders.png.import  basic_staff.png.import  body.png.import  e_basic_shoulders.png.import  e_l_arm_basic_robes.png.import  e_l_hand_basic_glove.png.import  e_lower_body_basic_robes.png.import  e_r_arm_basic_robes.png.import  e_r_hand_basic_glove.png.import  e_upper_body_basic_robes.png.import  face.png.import  hair.png.import  head.png.import  l_arm.png.import  larm.png.import  lleg.png.import  lleg_walk.png.import  r_arm.png.import  r_leg_walk.png.import  rarm.png.import  rleg.png.import
body/: body.tscn  face.tscn  hair.tscn  head.tscn  l_arm.tscn  l_leg.tscn  r_arm.tscn  r_leg.tscn
character/: character_root.gd  character_root.tscn
des/src/: action_factory.h  action_handler_interface.h  actions.h  combat_log.h  effect_interface.h  effects.cpp  effects.h  fwds.h  main.cpp  runner.h  state.h  unit.cpp  unit.h  utils.h
des/src/action_handlers/: corruption_action_handler.cpp  idle_action_handler.cpp  lifetap_action_handler.cpp  melee_action_handler.cpp  minor_heal_action_handler.cpp  shadowbolt_action_handler.cpp
equipment/: body_basic_robes.tscn  e_l_arm_basic_robes.tscn  e_l_hand_basic_gloves.tscn  e_lower_body_basic_robes.png.import  e_lower_body_basic_robes.tscn  e_r_arm_basic_robes.tscn  e_r_hand_basic_gloves.tscn  e_shoulders_basic.tscn  e_upper_body_basic_robes.png.import  e_upper_body_basic_robes.tscn  shoulder_basic.tscn
src/: CMakeLists.txt  register_types.cpp  wss_godot_interface.cpp  wss_godot_interface.h
